Ticket: #FT-1119 SubTicket: # Component:The trip name is out of the modal when it is too long with no special characters Changes: 1. Bug fix.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
@@ -286,6 +286,7 @@ button * {
 	border-bottom: 1px solid transparent;
 	border-top-right-radius: 0;
 	border-top-left-radius: 0;
+	word-wrap:break-word;
 }
 
 .panel {
